Fix padding on mobile
Close #80

--- a/assets/sass/style.sass
+++ b/assets/sass/style.sass
@@ -28,7 +28,7 @@ body
 header
     padding: 6em 1em 1em 0
     @media screen and (max-width: 736px)
-        padding: 3em 1em
+        padding: 3em 0
 
 h1,h2,h3
     margin-bottom: 0.5em
@@ -77,7 +77,7 @@ nav
     width: 45%
     max-width: 64em
     @media screen and (max-width: 736px)
-        width: 100%
+        width: 90%
 
 .tag-container
     display: flex
